se agrego texto en el codigo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,31 @@
 </head>
 <body>
  <h1> WINIFER </h1>
- <p> La teoría de sistemas o teoría general de los sistemas es el estudio interdisciplinario de los sistemas en general. Su propósito es estudiar los principios aplicables a los sistemas en cualquier nivel en todos los campos de la investigación
+ <p>
+
+     La teoría de sistemas (TS) es un ramo específico de la teoría general de sistemas (TGS).
+     La TGS surgió con los trabajos del alemán Ludwig von Bertalanffy, publicados entre 1950 y 1968. La TGS no busca solucionar problemas o intentar soluciones prácticas, pero sí producir teorías y formulaciones conceptuales que pueden crear condiciones de aplicación en la realidad empírica.
+     Los supuestos básicos de la TGS son:
+     Existe una nítida tendencia hacia la integración de diversas ciencias naturales y sociales.
+     Esa integración parece orientarse rumbo a un teoría de sistemas.
+     Dicha teoría de sistemas puede ser una manera más amplia de estudiar los campos no-físicos del conocimiento científico, especialmente en ciencias sociales.
+     Con esa teoría de los sistemas, al desarrollar principios unificadores que atraviesan verticalmente los universos particulares de las diversas ciencias involucradas, nos aproximamos al objetivo de la unidad de la ciencia.
+     Esto puede generar una integración muy necesaria en la educación científica.
+     La TGS afirma que las propiedades de los sistemas, no pueden ser descritos en términos de sus elementos separados; su comprensión se presenta cuando se estudian globalmente.
+     La TGS se fundamenta en tres premisas básicas:
+     Los sistemas existen dentro de sistemas: cada sistema existe dentro de otro más grande.
+     Los sistemas son abiertos: es consecuencia del anterior. Cada sistema que se examine, excepto el menor o mayor, recibe y descarga algo en los otros sistemas, generalmente en los contiguos. Los sistemas abiertos se caracterizan por un proceso de cambio infinito con su entorno, que son los otros sistemas. Cuando el intercambio cesa, el sistema se desintegra, esto es, pierde sus fuentes de energía.
+     Las funciones de un sistema dependen de su estructura: para los sistemas biológicos y mecánicos esta afirmación es intuitiva. Los tejidos musculares por ejemplo, se contraen porque están constituidos por una estructura celular que permite contracciones.
+     El interés de la TGS, son las características y parámetros que establece para todos los sistemas. Aplicada a la administración la TS, la empresa se ve como una estructura que se reproduce y se visualiza a través de un sistema de toma de decisiones, tanto individual como colectivamente.
+     Desde un punto de vista histórico, se verifica que:
+     La teoría de la administración científica usó el concepto de sistema hombre-máquina, pero se limitó al nivel de trabajo fabril.
+     La teoría de las relaciones humanas amplió el enfoque hombre-máquina a las relaciones entre las personas dentro de la organización. Provocó una profunda revisión de criterios y técnicas gerenciales.
+     La teoría estructuralista concibe la empresa como un sistema social, reconociendo que hay tanto un sistema formal como uno informal dentro de un sistema total integrado.
+     La teoría del comportamiento trajo la teoría de la decisión, donde la empresa se ve como un sistema de decisiones, ya que todos los participantes de la empresa toman decisiones dentro de una maraña de relaciones de intercambio, que caracterizan al comportamiento organizacional.
+     Después de la segunda guerra mundial, a través de la teoría matemática se aplicó la investigación operacional, para la resolución de problemas grandes y complejos con muchas variables.
+     La teoría de colas fue profundizada y se formularon modelos para situaciones típicas de prestación de servicios, en los que es necesario programar la cantidad óptima de servidores para una esperada afluencia de clientes.
+     Las teorías tradicionales han visto la organización humana como un sistema cerrado. Eso a llevado a no tener en cuenta el ambiente, provocando poco desarrollo y comprensión de la retroalimentación (feedback), básica para sobrevivir.
+
  </p>
 </body>
 </html>
